# copts

./: .gitignore  LICENSE  Makefile  README.md  copts.cabal  package.yaml  plot  stack.yaml
app/: Main.hs
samples/: naval_fate
src/: Combinators.hs  OptionParser.hs
src/Copts/: AST.hs  Applicative.hs  Graph.hs  Normalizer.hs  Parser.hs  Predict.hs
src/Copts/Graph/: DelimitedGraph.hs  Dot.hs
src/Copts/Normalizer/: DetailedOptions.hs  Optimizations.hs  Optionals.hs  Usage.hs
src/Copts/Parser/: Combinators.hs  Data.hs  Element.hs  OptionDetails.hs  Usage.hs
test/: Helpers.hs  NormalizedSamples.hs  OptionDetailsSpec.hs  OptionParserSpec.hs  ParsedSamples.hs  ParserSpec.hs  TextSamples.hs
test/Copts/: NormalizerSpec.hs  ParserSpec.hs  PredictSpec.hs
test/Copts/Graph/: DelimitedGraphSpec.hs
