name:                copts
version:             0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/fholiveira/copts#readme
license:             MIT
license-file:        LICENSE
author:              Fernando Oliveira
copyright:           2017 Fernando Oliveira
category:            Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                    ,  OptionParser
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
  default-language:    Haskell2010

executable copts
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , megaparsec
                     , copts
  default-language:    Haskell2010

test-suite copts-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       OptionParserSpec
  build-depends:       base
                     , megaparsec
                     , copts
                     , hspec
                     , hspec-megaparsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fholiveira/copts
